// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`definitions/index tests should return the default search field of node 1`] = `"name"`;

exports[`definitions/index tests should return the default sort field of node 1`] = `"name"`;

exports[`definitions/index tests should return the link of node as /domain/host 1`] = `"/domain/host"`;

exports[`definitions/index tests should return the link of node as /namespace/name 1`] = `"/namespace/name"`;

exports[`definitions/index tests should return the primary key of node 1`] = `"name"`;

exports[`definitions/index tests should return the resource data for specified resource 1`] = `
Object {
  "defaultSortField": "name",
  "detailKeys": Object {
    "headerRows": Array [
      "type",
      "detail",
    ],
    "rows": Array [
      Object {
        "cells": Array [
          Object {
            "resourceKey": "description.title.name",
            "type": "i18n",
          },
          Object {
            "resourceKey": "name",
          },
        ],
      },
      Object {
        "cells": Array [
          Object {
            "resourceKey": "description.title.namespace",
            "type": "i18n",
          },
          Object {
            "resourceKey": "namespace",
          },
        ],
      },
      Object {
        "cells": Array [
          Object {
            "resourceKey": "description.title.created",
            "type": "i18n",
          },
          Object {
            "resourceKey": "created",
            "transformFunction": [Function],
          },
        ],
      },
      Object {
        "cells": Array [
          Object {
            "resourceKey": "description.title.labels",
            "type": "i18n",
          },
          Object {
            "resourceKey": "labels",
          },
        ],
      },
    ],
    "title": "application.details",
  },
  "emptyMessage": [Function],
  "emptyTitle": [Function],
  "pluralKey": "table.plural.application",
  "primaryKey": "name",
  "secondaryKey": "namespace",
  "tableActions": Array [
    Object {
      "key": "table.actions.applications.view",
      "link": Object {
        "url": [Function],
      },
    },
    Object {
      "key": "table.actions.applications.edit",
      "link": Object {
        "state": Object {
          "cancelBack": true,
        },
        "url": [Function],
      },
    },
    Object {
      "key": "table.actions.applications.search",
      "link": Object {
        "url": [Function],
      },
    },
    Object {
      "delete": true,
      "key": "table.actions.applications.remove",
      "modal": true,
    },
  ],
  "tableKeys": Array [
    Object {
      "msgKey": "table.header.name",
      "resourceKey": "name",
      "transformFunction": [Function],
    },
    Object {
      "msgKey": "table.header.namespace",
      "resourceKey": "namespace",
    },
    Object {
      "msgKey": "table.header.clusters",
      "resourceKey": "clusterCount",
      "textFunction": [Function],
      "tooltipKey": "table.header.application.clusters.tooltip",
      "transformFunction": [Function],
    },
    Object {
      "msgKey": "table.header.resource",
      "resourceKey": "hubChannels",
      "textFunction": [Function],
      "tooltipKey": "table.header.application.resource.tooltip",
      "transformFunction": [Function],
    },
    Object {
      "msgKey": "table.header.timeWindow",
      "resourceKey": "hubSubscriptions",
      "textFunction": [Function],
      "tooltipKey": "table.header.application.timeWindow.tooltip",
      "transformFunction": [Function],
    },
    Object {
      "msgKey": "table.header.created",
      "resourceKey": "created",
      "transformFunction": [Function],
    },
  ],
  "uriKey": "name",
}
`;

exports[`definitions/index tests should return the secondary key of node 1`] = `"namespace"`;

exports[`definitions/index tests should return the table keys for this node 1`] = `
Array [
  Object {
    "msgKey": "table.header.name",
    "resourceKey": "name",
    "transformFunction": [Function],
  },
  Object {
    "msgKey": "table.header.namespace",
    "resourceKey": "namespace",
  },
  Object {
    "msgKey": "table.header.clusters",
    "resourceKey": "clusterCount",
    "textFunction": [Function],
    "tooltipKey": "table.header.application.clusters.tooltip",
    "transformFunction": [Function],
  },
  Object {
    "msgKey": "table.header.resource",
    "resourceKey": "hubChannels",
    "textFunction": [Function],
    "tooltipKey": "table.header.application.resource.tooltip",
    "transformFunction": [Function],
  },
  Object {
    "msgKey": "table.header.timeWindow",
    "resourceKey": "hubSubscriptions",
    "textFunction": [Function],
    "tooltipKey": "table.header.application.timeWindow.tooltip",
    "transformFunction": [Function],
  },
  Object {
    "msgKey": "table.header.created",
    "resourceKey": "created",
    "transformFunction": [Function],
  },
]
`;

exports[`definitions/index tests should return the uri key of node 1`] = `"name"`;
